# Estoque_QRCode

./: .coverage  .gitignore  App.py  DUMP.sql  README.md  docker-compose.yaml  dockerfile  example.env  index.py  main.py  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
configs/: CustomResponse.py  customExceptions.py  register.py  security.py  settings.py  statusMessage.py
controller/: Atribuicoes_controller.py  Categoria_controller.py  Conta_controller.py  Emprestimo_controller.py  Equipamento_controller.py  Materia_controller.py  Serie_controller.py  Status_controller.py  Token_controller.py  Usuarios_controller.py  __init__.py  controller.py  index.html
migrations/: env.py
model/: Model_Aluno.py  Model_Atribuicao_permanente.py  Model_Carregador.py  Model_Categoria.py  Model_Conta.py  Model_Emprestimo.py  Model_Equipamento.py  Model_Grupo.py  Model_Materia.py  Model_Professor.py  Model_Professor_Materia.py  Model_Status.py  Model_Usuario.py  Model_serie.py  __init__.py
repository/: conection.py
schema/: Schema_Conta.py  Schema_Emprestimo_Atribuicao.py  Schema_Equipamento.py  Schema_Status_Categoria_Serie_Materia.py  Schema_Usuario.py  Schema_token.py
service/: Atribuicoes_service.py  Categorias_service.py  Conta_service.py  Emprestimo_service.py  Equipamento_service.py  Materia_service.py  Serie_service.py  Status_service.py  Usuarios_service.py  __init__.py
services/: Atribuicoes_service.py  Categorias_service.py  Conta_service.py  Equipamento_service.py  Materia_service.py  Serie_service.py  Status_service.py  Usuarios_service.py
(+11 files in other folders)
