[tool.poetry]
name = "ProjetoEstoque"
version = "0.1.0"
description = ""
authors = ["Yuri-Gabriel <yurigabriel.f1012@gmail.com>", "jaspionU2 <gameraleatorio2202@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard", "uvicorn"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
psycopg2 = {version = "^2.9.10", extras = ["production"]}
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warning"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.10"


[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
